# sandra-desktop-container

./: .gitignore  README.md  angular.json  package-lock.json  package.json  tsconfig.app.json
.agent/skills/architecture/: SKILL.md
.agent/skills/design/: SKILL.md
.agent/skills/governance/: SKILL.md
.agent/skills/security/: SKILL.md
.github/workflows/: release.yml
scripts/: build-dmg.sh
src/: index.html  styles.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  proxy_handler.rs  remote_control.rs  storage.rs
src-tauri/src/commands/: apps.rs  connections.rs  handler_error.rs  mod.rs  monitor.rs  pdf.rs  system.rs  window.rs
src/app/: app.component.css  app.component.html  app.component.ts  inspector-styles.css
src/app/components/config/: config.component.css  config.component.html  config.component.ts
src/app/components/inspector/: inspector.component.css  inspector.component.html  inspector.component.ts
src/app/components/modal/: modal.component.html  modal.component.ts
src/app/components/sidebar/: sidebar.component.css  sidebar.component.html  sidebar.component.ts
src/app/components/storage/: storage.component.css  storage.component.html  storage.component.ts
src/app/core/models/: telemetry.model.ts
src/app/core/services/: app-state.service.ts  desktop-apps.service.ts  download.service.ts  logger.service.ts  sdc.service.ts
src/app/pages/apps/: apps.component.css  apps.component.html  apps.component.ts
src/app/pages/chat/: chat.component.css  chat.component.html  chat.component.ts
src/app/pages/connections/: connections.component.css  connections.component.html  connections.component.ts
src/app/pages/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
src/app/pages/monitor/: monitor.component.css  monitor.component.html  monitor.component.ts
src/app/pages/security/: security.component.ts
src/assets/: iframe-logger.js  splash.html
