[package]
name = "sandra-desktop-container"
version = "0.1.0"
description = "Contenedor de Escritorio Sandra"
authors = ["Carlos E. Peña A."]
edition = "2021"

[lib]
name = "sandra_desktop_container_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37.2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
argon2 = "0.5.3"
chrono = "0.4.43"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
local-ip-address = "0.6.9"
reqwest = { version = "0.13.1", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
native-tls = "0.2"
rustls = "0.23"
webpki-roots = "1.0.5"
rustls-ring = "0.0.1"
urlencoding = "2.1.3"
mac_address = "1.1.8"
